--- a/index.html
+++ b/index.html
@@ -137,7 +137,26 @@
 </div>
 
 
-  
+
+  <div class="row p-5">
+      <div class="col-lg-8 bg-white text-start">
+          <p class="a1 ">Luminar Technolab Pvt Ltd</p>
+          <p class="a2 ">CIN: U80220KL2021PTC071578</p>
+          <p class="a3">Luminar Technolab is an IT Finishing School located near Infopark - Cochin, <br> focused on providing
+              advanced level software training to Students and by helping <br> them to get placed in IT companies. We
+              are a team of IT professionals who have <br> experience in IT sector for more than 15 plus years. Our
+              fresher’s career foster <br> programs are Big Data Training, Data Science Training, Data Analytics
+              Training, <br> Python Training, Software Testing Training & Selenium Training in Cochin, Kerala <br> are
+              designed in such a way to match with the current industry requirements. Our <br> Vision is to provide
+              100% placements to students those who enroll with us for our <br> specialized courses.</p>
+          <button class="a4  mt-1 mb-3">LEARN MORE</button>
+          </div>
+      <div class="col-lg-4 bg-white text-center">
+          <img class="a5" src="./images/lum3.jpg" alt="">
+      </div>
+  </div>
+
+
 
 
 
