--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css"
     integrity="sha512-z3gLpd7yknf1YoNbCzqRKc4qyor8gaKU1qmn+CShxbuBusANI9QpRohGBreCFkKxLhei6S9CQXFEbbKuqLg0DA=="
     crossorigin="anonymous" referrerpolicy="no-referrer" />
-    <link rel="stylesheet" href="./carousel2.css">
+    <link rel="stylesheet" href="./index.css">
     <style>
       .i2{
           height: 800px;
@@ -140,8 +140,8 @@
 
   <div class="row p-5">
       <div class="col-lg-8 bg-white text-start">
-          <p class="a1 ">Luminar Technolab Pvt Ltd</p>
-          <p class="a2 ">CIN: U80220KL2021PTC071578</p>
+          <p class="a1">Luminar Technolab Pvt Ltd</p>
+          <p class="a2">CIN: U80220KL2021PTC071578</p>
           <p class="a3">Luminar Technolab is an IT Finishing School located near Infopark - Cochin, <br> focused on providing
               advanced level software training to Students and by helping <br> them to get placed in IT companies. We
               are a team of IT professionals who have <br> experience in IT sector for more than 15 plus years. Our
@@ -149,14 +149,30 @@
               Training, <br> Python Training, Software Testing Training & Selenium Training in Cochin, Kerala <br> are
               designed in such a way to match with the current industry requirements. Our <br> Vision is to provide
               100% placements to students those who enroll with us for our <br> specialized courses.</p>
-          <button class="a4  mt-1 mb-3">LEARN MORE</button>
+          <button class="a4 mt-1 mb-3">LEARN MORE</button>
           </div>
-      <div class="col-lg-4 bg-white text-center">
+      <div class="col-lg-4 bg-white text-start">
           <img class="a5" src="./images/lum3.jpg" alt="">
       </div>
   </div>
 
 
+  
+  <div class="bg-light mt-5">
+    <div><h3 class="text-center mt-5">OUR <span>COURSES</span></h3></div>
+    <div class="row mt-5 bg-white">
+        <div class="col-lg-6">
+            <img class="a6 ms-3" src="./images/lum4.jpg" alt="">
+        </div>
+        <div class="col-lg-6 p-5">
+            <p class="a7">DATA SCIENCE - ML - AI - BIG DATA WITH CLOUD & TABLEAU</p>    
+            <p class="a8">Python, Hadoop, Spark, Data Analytics, Linear Algebra, Statistics, Probability <br> Concepts, Machine Learning, Deep Learning, Data Science, Artificial <br> Intelligence, Tableau, AWS Cloud.</p>
+            <p class="a10">📅 Next Batch : Jan 03rd 2022 (09:30 am - 11:30 am)</p>
+            <p class="a10">⏰ Duration: 6 Months, 5-6 Days a Week, 2-3 Hours/day </p>
+            <p class="a10">🧑‍🏫 Course Fees: <a class="a9" href="">VIEW MORE</a></p>
+        </div>
+    </div>
+    </div>
 
 
 
