--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 </head>
 <body class="bg-light">
 <div>
-  <nav class="navbar navbar-expand-lg" style="background-color:whitesmoke;">
+  <nav class="sticky-top navbar navbar-expand-lg" style="background-color:whitesmoke;">
     <div class="container">
       <img src="./images/logo1.png" alt="">
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
@@ -73,7 +73,7 @@
         </div>
       </div>
       <div class="carousel-item" data-bs-interval="2000">
-        <img src="./images/lum2.jpg" class=" i1 d-block w-100" alt="...">
+        <img src="./images/lum2.jpg" class=" i3 d-block w-100" alt="...">
         <div class="text-white carousel-caption d-md-block">
           <div class="text-start">
             <p class="p1">Kerala's No.1 IT Finishing School <br>100% Placement Assistance</p>
@@ -162,7 +162,7 @@
   
   <div class="bg-light mt-5">
     <div><h3 class="text-center mt-5">OUR <span>COURSES</span></h3></div>
-    <div class="row mt-5 bg-white">
+    <div class="row a17 mt-5 bg-white">
         <div class="col-lg-6">
             <img class="a6 ms-3" src="./images/lum4.jpg" alt="">
         </div>
@@ -178,27 +178,33 @@
 
     <div class="container w-100 mt-5">
       <div class="row a14">
-          <div class="col-lg-4 bg-white">
+          <div class="a18 col-lg-4 bg-white">
           <img class="a11 mt-2" src="./images/lum5.jpg" alt="">
           <p class="mt-4 a12">Python Django - Angular- Full Stack Web Development Expert</p>
           <p class="a13">Core Python, Basics of Programming, Unix <br> Commands, Advanced Python, Django <br> Framework, REST API, Git, Angul...</p>
-          <button class="a15 text-white">VIEW MORE</button>    
+          <button class="a15 mb-5 text-white">VIEW MORE</button>    
            </div>
-           <div class="col-lg-4 bg-white">
+           <div class="a18 col-lg-4 bg-white">
               <img class="a11 mt-2" src="./images/lum6.jpg" alt="">
               <p class="mt-4 a12">Python Django - Angular- Full Stack Web Development Expert</p>
               <p class="a13">Core Python, Basics of Programming, Unix <br> Commands, Advanced Python, Django <br> Framework, REST API, Git, Angul...</p>
-              <button class="a15 text-white">VIEW MORE</button>    
+              <button class="a15 mb-5 text-white">VIEW MORE</button>    
           </div>
-          <div class="col-lg-4 bg-white">
+          <div class="a18 col-lg-4 bg-white">
               <img class="a11 mt-2" src="./images/lum7.jpg" alt="">
               <p class="mt-4 a12">Python Django - Angular- Full Stack Web Development Expert</p>
               <p class="a13">Core Python, Basics of Programming, Unix <br> Commands, Advanced Python, Django <br> Framework, REST API, Git, Angul...</p>
-              <button class="a15 text-white">VIEW MORE</button>    
+              <button class="a15 mb-5 text-white">VIEW MORE</button>    
           </div>
       </div>
   </div>
   
+  <div class="text-center mt-3 mb-3">
+    <button class="a16">View all Courses</button>
+  </div>   
+  
 
-</body>
+
+
+</body> 
 </html
