--- a/index.html
+++ b/index.html
@@ -180,21 +180,21 @@
       <div class="row a14">
           <div class="a18 col-lg-4 bg-white">
           <img class="a11 mt-2" src="./images/lum5.jpg" alt="">
-          <p class="mt-4 a12">Python Django - Angular- Full Stack Web Development Expert</p>
-          <p class="a13">Core Python, Basics of Programming, Unix <br> Commands, Advanced Python, Django <br> Framework, REST API, Git, Angul...</p>
-          <button class="a15 mb-5 text-white">VIEW MORE</button>    
+          <p class="mt-4 a12 px-2">Python Django - Angular- Full Stack Web Development Expert</p>
+          <p class="a13 px-2">Core Python, Basics of Programming, Unix <br> Commands, Advanced Python, Django <br> Framework, REST API, Git, Angul...</p>
+          <button class="a15 mb-5 px-2 text-white">VIEW MORE</button>    
            </div>
            <div class="a18 col-lg-4 bg-white">
               <img class="a11 mt-2" src="./images/lum6.jpg" alt="">
-              <p class="mt-4 a12">Python Django - Angular- Full Stack Web Development Expert</p>
-              <p class="a13">Core Python, Basics of Programming, Unix <br> Commands, Advanced Python, Django <br> Framework, REST API, Git, Angul...</p>
-              <button class="a15 mb-5 text-white">VIEW MORE</button>    
+              <p class="mt-4 a12 px-2">Python Django - Angular- Full Stack Web Development Expert</p>
+              <p class="a13 px-2">Core Python, Basics of Programming, Unix <br> Commands, Advanced Python, Django <br> Framework, REST API, Git, Angul...</p>
+              <button class="a15 mb-5 px-2 text-white">VIEW MORE</button>    
           </div>
           <div class="a18 col-lg-4 bg-white">
               <img class="a11 mt-2" src="./images/lum7.jpg" alt="">
-              <p class="mt-4 a12">Python Django - Angular- Full Stack Web Development Expert</p>
-              <p class="a13">Core Python, Basics of Programming, Unix <br> Commands, Advanced Python, Django <br> Framework, REST API, Git, Angul...</p>
-              <button class="a15 mb-5 text-white">VIEW MORE</button>    
+              <p class="mt-4 a12 px-2">Python Django - Angular- Full Stack Web Development Expert</p>
+              <p class="a13 px-2">Core Python, Basics of Programming, Unix <br> Commands, Advanced Python, Django <br> Framework, REST API, Git, Angul...</p>
+              <button class="a15 px-2 mb-5 text-white">VIEW MORE</button>    
           </div>
       </div>
   </div>
